# llvm_junk

./: .gitignore  CLAUDE.md  README.md
examples/: CMakeLists.txt  PROBLEMS_SOLVED.txt
examples/BrainF/: BrainF.cpp
examples/Fibonacci/: CMakeLists.txt  fibonacci.cpp
examples/Kaleidoscope/Chapter8/: CMakeLists.txt  toy.cpp
hello/: .gitignore  Makefile  arr.c  arr2.c  arr3.c  for_double.c  hello.c  hello.s  lambda.cc  lambda_main.c  loop.c  sizeof.c  stack_unwind.cc  struct.c  struct_array.c  t.c  t.s  t1.c  var1.c  zero.c
mini/: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  PROBLEMS_PENDING.txt  PROBLEMS_SOLVED.md  README.md  generate-tags.sh  vcpkg.json
mini/compiler/: CMakeLists.txt  TreeNode.cpp  TreeNode.h  all-test-compile.sh.config  compiler.cpp  gen_samples.cpp  lexer.l  llvm_Type_dump.cpp  llvm_Value_dump.cpp  llvm_helper.h  make-types.sh  mini.sh.config  p1.mini  p2.mini  p3.mini  parser.y  parser_bits.cpp  parser_bits.h  show_type_details.cpp  symbol_type.cpp  symbol_type.h  symbol_type_table.cpp  symbol_type_table.h
mini/compiler/test/: CMakeLists.txt  symbol_type_table.cpp  t2.cpp  test_symbol_type_table.cpp  test_t1.cpp  test_t2.cpp  test_t3.cpp
mini/examples/MyCompiler/: .gitignore  CMakeLists.txt  FlexLexer.h  Makefile  MyCompiler.cc  MyParser.cc  MyParser.h  MyParser.y  MyScanner.cc  MyScanner.l
mini/examples/flex/: CMakeLists.txt  lexer.l  scanner.cpp  scanner.h  y.tab.h
mini/lib/: CMakeLists.txt  mini_system.h  rtl_allocate_array.c  rtl_fix.c  rtl_output.c  rtl_output_bool.c  rtl_output_nl.c  rtl_output_real.c  rtl_output_str.c
mini/tests/: and_or.mini  arr.mini  arr2.mini  arr3.mini  boolean.mini  cast.mini  condition0.mini  conditions.mini  divide.mini  f11.mini  farr3.mini  fix.mini  for.mini  for_dynamic.mini  for_while.mini  function.mini  function2.mini  function3.mini  hello_world.mini  if-the-else.mini  labeled_block.mini  labeled_block2.mini  labeled_for.mini  labeled_for_2.mini  matr.mini  matr2.mini  matr2x2.mini  matr3.mini  matr_ijk.mini  neg.mini  nested_block.mini  output.mini  p1.mini  p11.mini  p2.mini  p3.mini  p4.mini  p41.mini  p5.mini  real.mini  (+8 more)
mini/tests/errors/: arr2_error.mini  syntax_error.mini  syntax_error2.mini
toy/: CMakeLists.txt  README.txt  t1.k  t4.1.k  toy3.cpp  toy4.cpp  toy5.cpp  toy6.cpp
unsorted/: .clang-format  CMakeLists.txt  CMakePresets.json  Module_dump.cpp  PROBLEM_SOLVED.txt  block_with_expression.cpp  const_expression_at_compile_time.cpp  example1.cpp  example1.dwo  example2.cpp  extracting_a_scalar_from_the_vector.cpp  function_with_args.cpp  getting_the_address_of_an_element.cpp  global_var.cpp  if_then_else.cpp  insert_scalar_into_vector.cpp  loop.cpp  memory_access_operations.cpp  reading_from_memory.cpp  return_statement.cpp  struct_literal_vs_identified.cpp  test_compile.sh.config
unsorted/test/: CMakeLists.txt  README.md  test_example.cpp  test_function_nested.cpp  test_function_with_args.cpp  test_global_var.cpp  test_llvm_basic.h  test_llvm_basic_test.cpp  test_struct_literal_vs_identified.cpp
